bpo-34395: Fix memory leaks caused by incautious usage of PyMem_Resize(). (GH-8756)